<resources>
    <string name="app_name">掌上吉大</string>

    <string name="action_settings">反馈</string>
    <string name="title_activity_oa">校内通知</string>
    <string name="title_activity_oa_detail">校内通知</string>
    <string name="title_activity_uims_login">登录</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!-- Strings related to login -->
    <string name="prompt_classno">教学号</string>
    <string name="prompt_password">UIMS密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_classno">教学号不正确</string>
    <string name="error_invalid_password">password is invalid</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">该项必填</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <!-- Strings related to Uims -->
    <string name="course_name">名称</string>
    <string name="course_gpoint">绩点</string>
    <string name="course_score">成绩</string>
    <string name="course_credit">学分</string>
    <string name="course_state">状态</string>
    <string name="course_class_hour">学时</string>
    <string name="course_type">类型</string>
    <string name="course_teacher">教师</string>
    <string name="course_available">剩余</string>
    <string name="course_area">上课地点</string>



    <string name="feedback">如果你有什么好的想法或者是反馈，欢迎反馈。邮箱： mobilejlu@newnius.com</string>
</resources>
