<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/uims_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            >
            </TextView>>

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>>
    </LinearLayout>>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_gpoint"
            >
        </TextView>

        <TextView
            android:id="@+id/course_gpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_score"
            >
        </TextView>

        <TextView
            android:id="@+id/course_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_credit"
            >
        </TextView>

        <TextView
            android:id="@+id/course_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>
    </LinearLayout>

</LinearLayout>